- Created PostThumbnailTemplate trait and added get_the_post_thumbnail WordPress function to Twig.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "co-developers/wp-twig",
     "type": "library",
     "license": "MIT",
-    "description": "Twig for WordPress",
+    "description": "Twig implementation for WordPress.",
     "homepage": "http://co-developers.com",
     "authors": [
         {
